# mcp-cpp-sdk

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  conanfile.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
benchmark/: README.md  RESULTS.md  collect_stats.py  docker-compose.yml  run.sh
benchmark/api-service/: Dockerfile  main.go
benchmark/client/: main.go
benchmark/cpp/: CMakeLists.txt  Dockerfile  benchmark_server.cpp  conanfile.txt
benchmark/go/: Dockerfile  go.sum  main.go
benchmark/infra/redis/: Dockerfile  requirements.txt  seed.py
benchmark/k6/: benchmark.js
benchmark/python/: Dockerfile  main.py  requirements.txt
benchmark/results/20260405_205033/: comparison.txt
benchmark/results/20260405_205033/cpp/: k6_summary.json  stats.json
benchmark/results/20260405_205033/go/: k6_summary.json  stats.json
benchmark/results/20260405_205033/python/: k6_summary.json  stats.json
docs/: Doxyfile.in  architecture.rst  conf.py  contributing.rst  examples.rst  getting-started.rst  index.rst
docs/_static/css/: custom.css
docs/api/: index.rst
docs/concepts/: completions.rst  context.rst  elicitation.rst  index.rst  middleware.rst  oauth.rst  pagination.rst  prompts.rst  resources.rst  roots.rst  subscriptions.rst  tools.rst  transports.rst
docs/guides/: deployment.rst  error-handling.rst  index.rst  testing.rst
docs/integrations/: client-apps.rst
examples/: client_stdio.cpp  echo_websocket.cpp  http_loopback.cpp  server_stdio.cpp  server_with_sampling.cpp
examples/advanced/: echo_websocket.cpp  http_loopback.cpp  server_with_sampling.cpp
examples/advanced/debugger/: README.md  debugger_server.cpp
examples/advanced/llama/: README.md  llama_server.cpp
examples/benchmark/: benchmark_http.cpp  benchmark_stdio.cpp  benchmark_websocket.cpp
examples/clients/stdio/: client_stdio.cpp  interactive_client.cpp
examples/debugger/: debugger_server.cpp
examples/features/: README.md  completions.cpp  elicitation.cpp  error_handling.cpp  graceful_shutdown.cpp  http_server_convenience.cpp  middleware.cpp  notifications_subscriptions.cpp  oauth_flow.cpp  pagination.cpp  progress_cancellation.cpp  roots.cpp  transport_memory.cpp
examples/llama/: llama_server.cpp
examples/servers/stdio/: server_simple.cpp  server_stdio.cpp
include/mcp/: client.hpp  concepts.hpp  constants.hpp  context.hpp  core.hpp  export.hpp  mcp.hpp  protocol.hpp  runtime.hpp  server.hpp  signal.hpp  transport.hpp  transport_factory.hpp
include/mcp/auth/: oauth.hpp
include/mcp/detail/: runtime_access.hpp  signal.hpp
include/mcp/protocol/: base.hpp  capabilities.hpp  completion.hpp  content.hpp  elicitation.hpp  notification.hpp  prompts.hpp  resources.hpp  roots.hpp  sampling.hpp  tasks.hpp  tools.hpp
include/mcp/transport/: http_client.hpp  http_server.hpp  http_session_manager.hpp  http_types.hpp  memory.hpp  stdio.hpp  websocket.hpp
scripts/: build.py  init.py  run_examples.py
src/: http_client_transport.cpp  http_server_transport.cpp  http_session_manager.cpp  runtime.cpp  server.cpp  server_http.cpp  server_stdio.cpp  server_tool.cpp  stdio_transport.cpp  transport_factories.cpp  version.cpp
src/transport/: http_client.cpp  http_client_transport.cpp  http_server.cpp  http_server_transport.cpp  http_session_manager.cpp  stdio_transport.cpp  transport_factories.cpp  websocket.cpp  websocket_transport.cpp
test/: auth_integration_test.cpp  auth_oauth_test.cpp  client_core_test.cpp  client_features_test.cpp  client_notifications_test.cpp  concepts_test.cpp  core_test.cpp  e2e_features_test.cpp  e2e_integration_test.cpp  gcc11_sso_crash_test.cpp  protocol_test.cpp  roots_test.cpp  runtime_test.cpp  sampling_test.cpp  server_cancellation_test.cpp  server_core_test.cpp  server_elicitation_test.cpp  server_handlers_test.cpp  server_http_test.cpp  server_logging_test.cpp  server_middleware_test.cpp  server_progress_test.cpp  server_stdio_test.cpp  server_subscriptions_test.cpp  server_tool_test.cpp  test_utils.hpp  transport_factory_test.cpp  transport_http_resumability_test.cpp  transport_http_session_manager_test.cpp  transport_http_test.cpp  transport_memory_test.cpp  transport_stdio_test.cpp  transport_test.cpp  transport_ws_test.cpp
